<resources>
    <string name="app_name">DogAdoptionApp</string>
    <string name="startup_button_login">Log In</string>
    <string name="startup_button_signup">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_preference">I am a</string>
    <string name="hint_person">Person</string>
    <string name="hint_doggo">Doggo</string>
    <string name="hint_preference2">Looking for a</string>
    <string name="button_signout">Sign Out</string>
    <string name="button_apply">Apply</string>
    <string name="incomplete_profile_error">Please complete all information before applying</string>
    <string name="no_users_available">There are no users available</string>
    <string name="send_button_text">Send</string>
    <string name="hint_message">Message</string>
</resources>
