<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- relative layout because nested scroll view can only have one child -->
        <RelativeLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="18dp"
            android:paddingBottom="18dp">

            <!-- profile picture-->
            <ImageView
                android:id="@+id/photoIV"
                android:layout_width="@dimen/normal_width"
                android:layout_height="@dimen/normal_width"
                android:paddingBottom="8dp"
                android:src="@drawable/default_pic"/>

            <!-- name input layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="@dimen/normal_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/photoIV"
                android:paddingBottom="8dp">

                <!-- name input edit text -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- email input layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="@dimen/normal_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTIL"
                android:paddingBottom="8dp">

                <!-- email edit text -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- age input layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageTIL"
                android:layout_width="@dimen/normal_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTIL"
                android:paddingBottom="8dp">

                <!-- age edit text -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_age"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/radioButtonLayout1"
                android:layout_width="@dimen/normal_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ageTIL"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <!-- preference text (i am a) -->
                <TextView
                    android:id="@+id/preferenceTV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/normal_height"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/hint_preference"/>

                <!-- preference options-->
                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/normal_height"
                    android:layout_weight="2"
                    android:paddingBottom="8dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <!-- preference person -->
                    <RadioButton
                        android:id="@+id/radioPerson1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_person"/>
                    <!-- preference dog -->
                    <RadioButton
                        android:id="@+id/radioDoggo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_doggo"/>

                </RadioGroup>

            </LinearLayout>


            <!-- preference2 -->
            <LinearLayout
                android:id="@+id/radioButtonLayout2"
                android:layout_width="@dimen/normal_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioButtonLayout1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <!-- preference2 (looking for a) -->
                <TextView
                    android:id="@+id/preferenceTV2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/normal_height"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/hint_preference2"/>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/normal_height"
                    android:layout_weight="2"
                    android:paddingBottom="8dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <!-- preference2 person -->
                    <RadioButton
                        android:id="@+id/radioPerson2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_person"/>

                    <!-- preference2 dog -->
                    <RadioButton
                        android:id="@+id/radioDoggo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_doggo"/>

                </RadioGroup>

            </LinearLayout>

            <!-- profile buttons -->
            <!-- Apply -> directs user to the main activity -->
        <Button
            android:id="@+id/applyButton"
            android:layout_width="@dimen/normal_width"
            android:layout_height="@dimen/normal_height"
            android:layout_below="@id/radioButtonLayout2"
            style="@style/NormalButton"
            android:text="@string/button_apply"/>

            <!-- sign out button directs user back to start activity -->
            <Button
                android:id="@+id/signoutButton"
                android:layout_width="@dimen/normal_width"
                android:layout_height="@dimen/normal_height"
                android:layout_below="@id/applyButton"
                style="@style/NormalButtonBlue"
                android:text="@string/button_signout"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Loading page -->
    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#aaaaaaaa">
        <!-- progress bar for when page is loading -->
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>